<resources>
    <string name="app_name">Code Labz</string>
    <string name="hello_welcome">Olá, seja bem vindo</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="login">Entrar</string>
    <string name="or_continue_with">Ou continue com</string>
    <string name="do_you_want_to_connect_with_us_register">Deseja se conectar com a gente? Cadastrar-se</string>
    <string name="confirm_register">Ok</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirme a Senha</string>
    <string name="already_connected_with_us_login">Já está conectado com a gente? Login</string>
    <string name="forget_your_password">Esqueceu a senha?</string>
    <string name="we_will_send_you_a_temporary">Enviaremos uma temporaria para você</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to Profile -->
    <string name="profile_username">Rafael Barbosa</string>
    <string name="profile_nickname">~@Rafinhas</string>
    <string name="profile_bio">Sou o Cara do TI</string>
    <string name="profile_followed_Topics">Topicos seguidos</string>
    <string name="profile_total_topics">%s tópicos</string>
    <string name="profile_no_post">Você não possui postagens ainda...</string>
    <string name="profile_no_post_to_share">Sinta-se a vontade pra compartilhar em nossa plataforma</string>

    <!-- Strings related to Topic -->
    <string name="topics_followed">Técnologias seguidas</string>
    <string name="topics">Técnologias</string>

    <!-- Strings related to Retrofit Connection -->
    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_LOAD_TASK">Erro ao carregar a tarefa.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão à internet necessária para uso da applicação.</string>

    <!-- Strings related Comments Page -->
    <string name="new_comment">Adicione um comentário...</string>
    <string name="button_comment">Publicar</string>

    <!-- Strings related Create Post -->
    <string name="spinner_prompt">Escolha um tópico</string>
    <string name="content_post">Discorra sobre a questão que você quer tratar...</string>
    <string name="title_post">Adicione o titulo...</string>
    <string name="public_post">Publicar</string>
    <string name="button_add_new_post">Botão para adicionar nova postagem</string>
    <string name="apelido_da_pessoa">Apelido_da_pessoa</string>
    <string name="profilePicture">ProfilePicture</string>
    <string name="settings_profile_button">settings profile button</string>
    <string name="search">Filtrar</string>
    <string name="enviado_por_user_em_data">Enviado por %s em %s</string>
    <string name="enviado_em">Enviado em %s</string>
    <string name="s_curtidas">%s curtidas</string>
    <string name="qtd_comentarios">%s comentários</string>
    <string name="algum_dia">algum dia</string>

    <string name="posts_in_topic_title_empty">Este tópico não tem nenhum post ainda...</string>
    <string name="posts_in_topic_message_empty">Mas você pode ser o primeiro a postar</string>
    <string name="verify_infos_request">Verifique as informações</string>
    <string name="error_intern">Erro interno</string>
    <string name="error_in_servidor">Erro no servidor</string>
    <string name="insert_one_comment_before_continue">Insira um comentário antes de continuar</string>
    <string name="nickname">Nickname</string>
    <string name="insert_all_camps_to_continue">Preencha todos os campos para continuar</string>
    <string name="register_sucess">Cadastro efetuado com sucesso!</string>
    <string name="select_avatar_first_time">Antes da gente continuar, vamos selecionar seu avatar?</string>
    <string name="update_your_avatar">Atualize aqui seu avatar</string>


</resources>