<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/code_background_black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@color/code_background_black">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/logo_codelabz" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:background="@drawable/border_cards"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="36dp"
                        android:src="@drawable/logo_codelabz" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:id="@+id/avatar_user"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/profile_picture"
                        android:contentDescription="@string/profilepicture" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/name_profile_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="70dp"
                            android:text="@string/profile_username"
                            android:textColor="@color/white"
                            android:textSize="25sp" />

                        <TextView
                            android:id="@+id/username_profile_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:text="@string/profile_nickname"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>
            <!--separando .............-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="56dp"
                        android:background="@drawable/border_cards">

                        <LinearLayout
                            android:layout_width="300dp"
                            android:layout_height="56dp"
                            android:background="@color/code_background_black"
                            android:paddingLeft="9dp">

                            <TextView
                                android:id="@+id/bio_profile_page"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/profile_bio"
                                android:textColor="@color/white"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="22dp"
                        android:layout_height="match_parent" />

                    <FrameLayout
                        android:layout_width="47dp"
                        android:layout_height="56dp"
                        android:background="@drawable/border_cards">

                        <ImageButton
                            android:layout_width="47dp"
                            android:layout_height="56dp"
                            android:layout_gravity="center"
                            android:background="@color/code_background_black"
                            android:src="@drawable/icon_config"
                            android:contentDescription="@string/settings_profile_button" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="22dp"
                    android:layout_height="22dp" />

                <LinearLayout
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_cards">

                    <LinearLayout
                        android:layout_width="369dp"
                        android:layout_height="wrap_content"
                        android:background="@color/code_background_black"
                        android:orientation="vertical"
                        android:padding="9dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_followed_Topics"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/topico_qtd_profile_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_total_topics"
                            android:textColor="@color/code_purple_normal"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/lost_astronaut"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_no_post"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_no_post_to_share"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textAlignment="center"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>