<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_page"
    tools:context=".view.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="top"
                android:background="@color/code_background_black"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="15dp"
                        android:layout_marginBottom="30dp"
                        android:src="@drawable/logo_codelabz" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|bottom"
                        android:src="@drawable/feed_customizable" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top|center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="324dp"
                    android:layout_height="wrap_content"
                    android:gravity="top|center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="24dp"
                        android:fontFamily="@font/dosis_medium"
                        android:text="@string/hello_welcome"
                        android:textColor="@color/white"
                        android:textSize="32sp" />

                    <EditText
                        android:id="@+id/inputEmailLogin"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/border_input_borders_top"
                        android:drawableStart="@android:drawable/sym_action_email"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/code_grey_normal"
                        android:fontFamily="@font/dosis_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="16dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/code_grey_normal"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputSenhaLogin"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:autofillHints="password"
                        android:background="@drawable/border_input_borders_bottom"
                        android:drawableStart="@drawable/icon_locked"
                        android:drawableEnd="@drawable/icon_visibility_off"
                        android:drawablePadding="30dp"
                        android:drawableTint="@color/code_grey_normal"
                        android:fontFamily="@font/dosis_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="18dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/code_grey_normal"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/button_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:fontFamily="@font/dosis_extra_light"
                        android:text="@string/forgot_password"
                        android:textColor="@color/code_grey_normal"
                        android:textSize="12sp" />

                    <Button
                        android:id="@+id/button_login"
                        android:layout_width="300dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/border_button_login"
                        android:fontFamily="@font/dosis_semi_bold"
                        android:text="@string/login"
                        android:textColor="@color/white" />

                </LinearLayout>

                <TextView
                    android:id="@+id/button_register_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/dosis_extra_light"
                    android:text="@string/do_you_want_to_connect_with_us_register"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="90dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@drawable/gradient_row_left_bottom" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|center"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/dosis_extra_light"
                        android:text="@string/or_continue_with"
                        android:textColor="@color/code_grey_normal"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="90dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@drawable/gradient_row_right_bottom" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/button_login_with_github"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="30dp"
                    android:background="@null"
                    android:src="@drawable/github_icon_login" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>