<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/code_background_black"
    tools:context=".forget_password.ForgetPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@color/code_background_black"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/arrow_back_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/icon_arrow_back" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="40dp"
                    android:src="@drawable/logo_codelabz" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:src="@drawable/fingerprint_1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="top|center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/home"
                    android:layout_width="324dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:fontFamily="@font/dosis_medium"
                        android:text="@string/forget_your_password"
                        android:textColor="@color/white"
                        android:textSize="32sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="32dp"
                        android:fontFamily="@font/dosis_extra_light"
                        android:text="@string/we_will_send_you_a_temporary"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/inputForgetPassword"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:autofillHints="emailAddress"
                        android:background="@drawable/border_input_full_borders"
                        android:drawableStart="@drawable/icon_person"
                        android:drawablePadding="16dp"
                        android:drawableTint="@color/code_grey_normal"
                        android:fontFamily="@font/dosis_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="16dp"
                        android:textColor="@color/code_grey_normal"
                        android:textColorHint="@color/code_grey_normal"
                        android:textSize="16sp"
                        tools:ignore="TextFields" />

                    <Button
                        android:id="@+id/button_forget_password"
                        android:layout_width="300dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/border_button_login"
                        android:fontFamily="@font/dosis_semi_bold"
                        android:text="@string/confirm_register"
                        android:textColor="@color/white" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>